inclusao valor da key do maps no arquivo de configuracao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.jackson.date-format=yyyy-MM-dd
 
 server.port=${PORT:8099}
+
+infoafp-geolocalizacao.g-maps.key=AIzaSyAtWKlfJ6JCczn2g7IUELH4JEkExdAsDNM
