--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,10 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+	    	<groupId>org.apache.commons</groupId>
+	    	<artifactId>commons-lang3</artifactId>
+	    </dependency>
 	</dependencies>
 </project>
