--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jackson.date-format=yyyy-MM-dd
 
 server.port=${PORT:8099}
 
-infoafp-geolocalizacao.g-maps.key=AIzaSyAtWKlfJ6JCczn2g7IUELH4JEkExdAsDNM
+infoafp-geolocalizacao.g-maps.key=
